--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,12 @@ crossorigin="anonymous"/>
   window.resticon = '<%= image_url "resticon.png" %>'
   window.salmonplate = '<%= image_url "salmon_plate.jpg" %>'
   window.raterev = '<%= image_url "rate_rev.png" %>'
+  window.resdd_icon = '<%= image_url "resdd_icon.png" %>'
+  window.ppl_b = '<%= image_url "ppl_b.png" %>'
+  window.pplsvg = '<%= image_url "ppl.svg" %>'
+  window.clocksvg = '<%= image_url "svgclock.svg" %>'
+  window.calsvg = '<%= image_url "cal.svg" %>'
+
 </script>
   </head>
 
