--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -272,7 +272,7 @@ position: absolute;
   font-family: 'Amiko', sans-serif;
  padding-right:10px;
   margin-top: 3px;
-  
+  cursor:pointer
 }
 
 
@@ -284,6 +284,7 @@ position: absolute;
   padding-left: 5px;
   padding-right: 13px;
   font-family: 'Amiko', sans-serif;
+  cursor:pointer
 }
 
 .modal-flex{
