--- a/app/assets/stylesheets/api/search_page.scss
+++ b/app/assets/stylesheets/api/search_page.scss
@@ -177,6 +177,7 @@ display:flex;
   display: flex;
   align-items: center;
   margin-top: 9px;
+  height: 20px;
 }
 .sp-info p{
   font-size: 14px;
@@ -202,11 +203,15 @@ display:flex;
   color: lightgray;
 }
 
+.srch-str{
+  display: flex;
+}
+
 .dols{
   display: flex;
   align-items: center;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 4px;
 
 }
 .dols-in{
@@ -259,6 +264,40 @@ display:flex;
 }
 .dols2 div{
 margin-right: 5px;
+}
+
+.avail-btns{
+  display:flex;
+  margin-top: 8px;
+}
+.avail-btns button{
+  margin-right: 10px;
+}
+.valid-t{
+  background-color: #B22222;
+  color:white;
+  height: 32px;
+  width: 98px;
+  cursor: pointer;
+}
+.valid-t:hover{
+  background-color:#8d1b1b;
+  transition: 0.4s;
+}
+
+.inv-t{
+background-color: rgb(228, 224, 224);
+  height: 32px;
+  width: 98px;
+}
+
+.timeslots > span{
+  display: flex;
+  justify-content: flex-end;
+  width: 525px;
+  font-size: 12px;
+
+  font-weight: bold;
 }
 
 
