working state for tables search

--- a/app/assets/stylesheets/api/search_page.scss
+++ b/app/assets/stylesheets/api/search_page.scss
@@ -180,9 +180,9 @@ display:flex;
   height: 20px;
 }
 .sp-info p{
-  font-size: 14px;
+  font-size: 12px;
   padding-left: 3px;
-  margin-top: 4px;
+margin-top: 4px;
 }
 
 .fpst{
@@ -296,8 +296,14 @@ background-color: rgb(228, 224, 224);
   justify-content: flex-end;
   width: 525px;
   font-size: 12px;
-
+  align-items: center;
   font-weight: bold;
+  margin-top:-15px;
+}
+
+.timeslots > span > img{
+  height: 18px;
+  width: 18px;
 }
 
 
