--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@ crossorigin="anonymous"/>
   window.pplsvg = '<%= image_url "ppl.svg" %>'
   window.clocksvg = '<%= image_url "svgclock.svg" %>'
   window.calsvg = '<%= image_url "cal.svg" %>'
+  window.fastclock = '<%= image_url "fast_clock.png" %>'
 
 </script>
   </head>
