changed splash and search date display

--- a/app/assets/stylesheets/api/landing.scss
+++ b/app/assets/stylesheets/api/landing.scss
@@ -164,6 +164,18 @@ background-color: white;
   align-items: center;
 
 }
+.splash-date-o{
+      position: absolute;
+   background-color: white;
+   width: 110px;
+    font-size: 15px;
+    margin-top: 8px;
+    margin-left: -344px;
+    padding-left: 19px;
+    height: 33px;
+    display: flex;
+    align-items: center;
+}
 
 
 .search-form-btn{
