--- a/app/assets/stylesheets/api/landing.scss
+++ b/app/assets/stylesheets/api/landing.scss
@@ -74,14 +74,14 @@ min-width: 1140px;
 
 .splash-search-input{
   background-color:white;
-  height: 40px;
+  height: 100%;
   border:none;
   border-right: solid lightgray 1px;
   font-size: 15px;
   font-family: 'Amiko', sans-serif;
   padding-right: 15px;
   padding-left: 5px;
-  margin-top: 3px;
+
   cursor:pointer;
   
 }
@@ -112,7 +112,7 @@ min-width: 1140px;
 position: absolute;
 font-size: 18px;
 background-color: white;
-margin-right: 10px;
+margin-right: 11px;
 }
 .src-u2 > i{
 position: absolute;
@@ -132,6 +132,7 @@ background-color: white;
 }
 
 .splash-time-in{
+ 
   display:flex;
   align-items: center;
   border-right: solid lightgray 1px;
@@ -143,6 +144,7 @@ background-color: white;
 }
 .splash-time-in select{
   font-family: 'Amiko', sans-serif;
+  height:87%;
   font-size: 15px;
   border: none;
   width: 125px;
@@ -155,8 +157,9 @@ background-color: white;
   position: absolute;
   background-color:white;
   right: 0;
-  padding-right: 15px;
+  margin-right: 15px;
   cursor: pointer;
+   font-size: 17px;
 }
 
 #splash-search-div{
