--- a/app/assets/stylesheets/api/search_page.scss
+++ b/app/assets/stylesheets/api/search_page.scss
@@ -22,14 +22,14 @@ background-color: white;
 
 .sp-input{
 background-color:white;
-  height: 37px;
+  height: 100%;
   border:none;
   border-right: solid lightgray 1px;
   font-size: 15px;
   font-family: 'Amiko', sans-serif;
   padding-right: 10px;
   padding-left: 5px;
-  margin-top:3px;
+
   width: 150px;
   cursor:pointer;
 }
@@ -41,7 +41,7 @@ background-color:white;
     font-size: 15px;
     margin-top: 5px;
     margin-left: -332px;
-    padding-left: 15px;
+    padding-left: 17px;
     height: 33px;
     display: flex;
     align-items: center;
@@ -59,7 +59,8 @@ background-color:white;
   position: absolute;
   right:0;
   background-color:white;
-  padding-right: 15px;
+  padding-right: 2px;
+  margin-right: 13px;
   padding-top: 1px;
 
 }
