--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -1034,9 +1034,10 @@ border-bottom: solid lightgray 1px;
   justify-content: center;
   font-weight: none;
   border-radius: 3px;
-  font-size: 13px;
+  font-size: 12.8px;
   border:none;
   outline: none;
+  padding: 1px 3px;
 }
 .w-valid-t:hover{
   background-color:#ad6666;
